--- a/index.html
+++ b/index.html
@@ -7,22 +7,17 @@
 <body>
     <h3>Choose a location from the list:</h3>
     <ul data-bind="foreach: locationList">
-        <li data-bind="text: name, click: $parent.setMarker"></li>
+        <li data-bind="text: name, click: $parent.setLocation"></li>
     </ul>
-    <div data-bind="with: currentLocation">
+    <div data-bind="with: initialLocations">
         <div>
             <h2 data-bind="text: name"></h2>
-            <div style="height: 200px" id="map"></div>
-            <div>
-                <h2>Tags:</h2>
-                <ul data-bind="foreach: tags">
-                        <li data-bind="text: $data"></li>
+            <div style="height: 200px" id="google-map"></div>
 
-                </ul>
-            </div>
     </div>
     <script 
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDHX5DB-7dpBp4wQxZt_tLPUyy4WzD0mec&signed_in=true&callback=initMap"></script>
+        src="https://maps.googleapis.com/maps/api/js?v=3.exp&key=AIzaSyDHX5DB-7dpBp4wQxZt_tLPUyy4WzD0mec&signed_in=true" ></script>
+        <!-- &callback=initialize was at end of script; dismissing it made my code work -->
     <script src="js/lib/knockout-3.2.0.js"></script>
     <script src="js/app.js"></script>
 </body>
