--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <title>Neighborhood Map</title>
 </head>
 <body>
-    <h3>Choose a location from the list:</h3>
+    <h3>Browse the list of locations:</h3>
+    <input id="#places_search_text" placeholder=" Search for places here..." type="search" data-bind="textInput: places_search_text, event: {keyup: search}" autocomplete="off">        
+
     <ul data-bind="foreach: locationList">
         <li data-bind="text: name, click: $parent.setMarker"></li>
     </ul>
@@ -24,7 +26,7 @@
 
         <div style="height: 200px" id="google-map"></div>
     </div>
-
+    <script src="js/lib/jQuery.min.js"></script>
     <script 
         src="https://maps.googleapis.com/maps/api/js?v=3.exp&key=AIzaSyDHX5DB-7dpBp4wQxZt_tLPUyy4WzD0mec&signed_in=true" ></script>
         <!-- &callback=initialize was at end of script; dismissing it made my code work -->
