--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <title>Neighborhood Map</title>
 </head>
 <body>
-    <h3>Browse the list of locations:</h3>
-    <input id="#places_search_text" placeholder=" Search for places here..." type="search" data-bind="textInput: places_search_text, event: {keyup: search}" autocomplete="off">        
+    <h3>Choose a location from the list:</h3>
+    <input id="#places_search_text" placeholder=" Search for places here..." type="search" data-bind="textInput: filter, event: {keyup: search}" autocomplete="off"> 
 
     <ul data-bind="foreach: locationList">
         <li data-bind="text: name, click: $parent.setMarker"></li>
@@ -22,7 +22,6 @@
                 </ul>
             </div>
     </div>
-    <div>
 
         <div style="height: 200px" id="google-map"></div>
     </div>
@@ -30,7 +29,7 @@
     <script 
         src="https://maps.googleapis.com/maps/api/js?v=3.exp&key=AIzaSyDHX5DB-7dpBp4wQxZt_tLPUyy4WzD0mec&signed_in=true" ></script>
         <!-- &callback=initialize was at end of script; dismissing it made my code work -->
-    <script src="js/lib/knockout-3.2.0.js"></script>
+    <script src="js/lib/knockout-3.3.0.js"></script>
     <script src="js/app.js"></script>
 </body>
 </html>
