--- a/index.html
+++ b/index.html
@@ -1,30 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
     <title>Neighborhood Map</title>
+    <link href="http://fonts.googleapis.com/css?family=Lato:200,400" rel="stylesheet">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/styles.css">
+    <script 
+    src="https://maps.googleapis.com/maps/api/js?v=3.exp&key=AIzaSyDHX5DB-7dpBp4wQxZt_tLPUyy4WzD0mec&signed_in=true" ></script>
+    <!-- &callback=initialize was at end of script; dismissing it made my code work -->
 </head>
 <body>
-    <h3>Choose a location from the list:</h3>
-    <input id="s-input" class="controls" type="search" data-bind="textInput: query, valueUpdate: 'keyup'"></input>
-    <div id="listbx">
+     <div class="container">
+        <header>
+            <div class="row">
+                <div class="col-md-10 text-left text-uppercase">
+                    <h1 class="text-thin title-size">Basel Guide</h1>
+                    <p>Learn about the Basel area</p>
+                </div>
+                <div class="col-md-2">
+                    <img class="img-responsive title-logo" src="img/Swatch-Kantons-Wappen.png" alt="wappen">
+                </div>
+            </div>
+        </header>
+        <div class="row">
+            <div class="col-md-12">
+                <hr>
+            </div>
+        </div>
 
-    <ul data-bind="foreach: search()">
-        <li data-bind="text: name, click: $parent.setMarker"></li>
-    </ul>
-<!--         <div>
-            <h2>Tags:</h2>
-            <ul data-bind="foreach: tags">
-                <li data-bind="$data "></li>
-            </ul>
-        </div> -->
-        <div style="height: 200px" id="google-map"></div>
+        <div class="row">
+            <div class="col-md-4 text-background">
+                <h3>Choose a point of interest from the list:</h3>
+                <input id="s-input" class="controls" placeholder="Search..." type="search" data-bind="textInput: query, valueUpdate: 'keyup'"></input>
+                <div id="listbx">
+                    <ul data-bind="foreach: search()">
+                        <li data-bind="text: name, click: ViewModel.setMarker"></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="col-md-8">
+                <div style="height: 400px" id="google-map"></div>
+            </div>
+        </div>
+
+        <script src="js/lib/jQuery.min.js"></script>
+
+        <script src="js/lib/knockout-3.3.0.js"></script>
+        <script src="js/app.js"></script>
     </div>
-    <script src="js/lib/jQuery.min.js"></script>
-    <script 
-        src="https://maps.googleapis.com/maps/api/js?v=3.exp&key=AIzaSyDHX5DB-7dpBp4wQxZt_tLPUyy4WzD0mec&signed_in=true" ></script>
-        <!-- &callback=initialize was at end of script; dismissing it made my code work -->
-    <script src="js/lib/knockout-3.3.0.js"></script>
-    <script src="js/app.js"></script>
 </body>
 </html>
