--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
     <link href="http://fonts.googleapis.com/css?family=Lato:200,400" rel="stylesheet">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/styles.css">
-    <script 
-    src="https://maps.googleapis.com/maps/api/js?v=3.exp&key=AIzaSyDHX5DB-7dpBp4wQxZt_tLPUyy4WzD0mec&signed_in=true" ></script>
-    <!-- &callback=initialize was at end of script; dismissing it made my code work -->
+
 </head>
 <body>
      <div class="container">
@@ -64,10 +62,13 @@
                 
             </div>
         </div>
-
-        <script src="js/lib/jQuery.min.js"></script>
-        <script src="js/lib/knockout-3.3.0.js"></script>
-        <script src="js/app.js"></script>
+    <script>function initialize() {}</script>
+    <script 
+    src="https://maps.googleapis.com/maps/api/js?v=3.exp&key=AIzaSyDHX5DB-7dpBp4wQxZt_tLPUyy4WzD0mec&signed_in=true&callback=initialize"></script>
+    <!-- &callback=initialize was at end of script; dismissing it made my code work -->
+        <script async src="js/lib/jquery.min.js"></script>
+        <script async defer src="js/lib/knockout-3.3.0.js"></script>
+        <script async src="js/app.js"></script>
     </div>
 </body>
 </html>
