--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <link href="http://fonts.googleapis.com/css?family=Lato:200,400" rel="stylesheet">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/styles.css">
+    <script>function googleError() { 
+          alert("Google map failed to load!");
+      }
+    </script>
+    <script async defer src="http://maps.googleapis.com/maps/api/js?callback=initialize" onerror="googleError()"></script>
 </head>
 <body>
      <div class="container">
@@ -31,7 +36,7 @@
         <div class="row">
             <div class="col-md-4 text-background">
                 <h3>Choose a point of interest from the list:</h3>
-                <input id="s-input" class="controls" placeholder="Search places from the list below" type="search" data-bind="textInput: query, valueUpdate: 'keyup'"></input>
+                <input id="s-input" class="controls" placeholder="Search places from the list below" type="search" data-bind="textInput: query, valueUpdate: 'keyup'"/>
                 <div id="listbx">
                     <ul data-bind="foreach: search()">
                         <li id="listmarker" data-bind="text: name, click: $parent.listClick"></li>
@@ -44,16 +49,10 @@
         </div>
         <div class="row">
             <div class="col-md-12">
-                <p><p/>
+                <p></p>
             </div>
         </div>
 
-    <script>function initialize() {}</script>
-    <script>function googleError() { 
-          alert("Google map failed to load!");
-      }
-    </script>
-    <script src="http://maps.googleapis.com/maps/api/js?callback=initialize" onerror="googleError()"></script>
         <script async src="js/lib/jquery.min.js"></script>
         <script async src="js/lib/knockout-3.3.0.js"></script>
         <script async src="js/app.js"></script>
